# agentbox

./: .dockerignore  Cargo.toml  PROJECT_PLAN.md  README.md  compose.yaml  install.sh
.agentbox/: .gitignore  config.toml  config.toml.bak  env.example
images/fullstack/: Dockerfile  entrypoint.sh  host-browser-open.sh
instructions/: agent.md
src/: cli.rs  compose.rs  config.rs  docker.rs  main.rs  project.rs  security.rs  tui.rs
