[package]
name = "agentbox"
version = "0.1.0"
edition = "2024"
description = "Frictionless Docker sandboxes for coding agents"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.20"

[profile.release]
strip = true
lto = true
codegen-units = 1
